// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePost api/post/create create link post 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "body": "awesome post #1!",
  "category": null,
  "children": null,
  "commentCount": 0,
  "commentary": null,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "data": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "balance": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "downVotes": 0,
    "eligibleForReward": true,
    "expectedPayout": 0,
    "hidden": false,
    "isInFeed": false,
    "latestComment": "[SANITIZED]",
    "pagerank": 0,
    "pagerankRaw": 0,
    "paidOut": false,
    "parentPost": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "children": null,
      "commentCount": 1,
      "commentary": null,
      "createdAt": "[SANITIZED]",
      "data": Object {
        "__v": 0,
        "_id": "[SANITIZED]",
        "balance": 0,
        "community": "relevant",
        "communityId": "c00000000000000000000001",
        "createdAt": "[SANITIZED]",
        "downVotes": 0,
        "eligibleForReward": true,
        "expectedPayout": 0,
        "hidden": false,
        "isInFeed": true,
        "latestComment": "[SANITIZED]",
        "pagerank": 0,
        "pagerankRaw": 0,
        "paidOut": false,
        "payOutShare": 0,
        "payout": 0,
        "payoutTime": "[SANITIZED]",
        "post": "[SANITIZED]",
        "postDate": "[SANITIZED]",
        "rank": "[SANITIZED]",
        "relevance": 0,
        "relevanceNeg": 0,
        "repost": false,
        "shares": 0,
        "tags": Array [
          "tag11",
          "tag12",
        ],
        "totalShares": 0,
        "type": "link",
        "upVotes": 0,
        "updatedAt": "[SANITIZED]",
      },
      "downVotes": 0,
      "embeddedUser": Object {
        "relevance": null,
      },
      "flagged": false,
      "flaggedBy": Array [],
      "hidden": false,
      "id": "[SANITIZED]",
      "latestComment": "[SANITIZED]",
      "links": Array [],
      "mentions": Array [],
      "metaPost": Object {
        "__v": 0,
        "_id": "[SANITIZED]",
        "articleAuthor": Array [],
        "categories": Array [
          null,
        ],
        "createdAt": "[SANITIZED]",
        "description": "my amazing post",
        "domain": "example.com",
        "flagged": false,
        "flaggedBy": Array [],
        "image": "link_img1.jpg",
        "keywords": Array [],
        "links": Array [],
        "tags": Array [
          "tag11",
          "tag12",
        ],
        "title": "postTitle",
        "updatedAt": "[SANITIZED]",
        "url": "https://example.com/testPost1",
      },
      "pagerank": 0,
      "paidOut": false,
      "payoutTime": "[SANITIZED]",
      "postDate": "[SANITIZED]",
      "rank": "[SANITIZED]",
      "relevance": 0,
      "reposted": null,
      "seenInFeedNumber": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "twitter": false,
      "twitterScore": 0,
      "type": "link",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
      "url": "https://example.com/testPost1",
      "version": "metaRework",
    },
    "payOutShare": 0,
    "payout": 0,
    "payoutTime": "[SANITIZED]",
    "post": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "relevanceNeg": 0,
    "repost": false,
    "shares": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "totalShares": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
  },
  "downVotes": 0,
  "embeddedUser": Object {
    "_id": "[SANITIZED]",
    "handle": "alice",
    "image": "alice-pic.jpg",
    "name": "Alice",
    "relevance": null,
  },
  "flagged": false,
  "flaggedBy": Array [],
  "hidden": false,
  "id": "[SANITIZED]",
  "linkParent": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "children": null,
    "commentCount": 1,
    "commentary": null,
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": true,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": true,
      "latestComment": "[SANITIZED]",
      "pagerank": 0,
      "pagerankRaw": 0,
      "paidOut": false,
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "[SANITIZED]",
      "postDate": "[SANITIZED]",
      "rank": "[SANITIZED]",
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "link",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "relevance": null,
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "latestComment": "[SANITIZED]",
    "links": Array [],
    "mentions": Array [],
    "metaPost": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "articleAuthor": Array [],
      "categories": Array [
        null,
      ],
      "createdAt": "[SANITIZED]",
      "description": "my amazing post",
      "domain": "example.com",
      "flagged": false,
      "flaggedBy": Array [],
      "image": "link_img1.jpg",
      "keywords": Array [],
      "links": Array [],
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "title": "postTitle",
      "updatedAt": "[SANITIZED]",
      "url": "https://example.com/testPost1",
    },
    "pagerank": 0,
    "paidOut": false,
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": "[SANITIZED]",
    "relevance": 0,
    "reposted": null,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "twitter": false,
    "twitterScore": 0,
    "type": "link",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "version": "metaRework",
  },
  "links": Array [],
  "mentions": Array [
    "test",
    "user1",
  ],
  "metaPost": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "articleAuthor": Array [],
    "categories": Array [
      null,
    ],
    "createdAt": "[SANITIZED]",
    "description": "my amazing post",
    "domain": "example.com",
    "flagged": false,
    "flaggedBy": Array [],
    "image": "link_img1.jpg",
    "keywords": Array [],
    "links": Array [],
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "title": "postTitle",
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
  },
  "pagerank": 0,
  "paidOut": false,
  "parentPost": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "children": null,
    "commentCount": 1,
    "commentary": null,
    "createdAt": "[SANITIZED]",
    "data": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "balance": 0,
      "community": "relevant",
      "communityId": "c00000000000000000000001",
      "createdAt": "[SANITIZED]",
      "downVotes": 0,
      "eligibleForReward": true,
      "expectedPayout": 0,
      "hidden": false,
      "isInFeed": true,
      "latestComment": "[SANITIZED]",
      "pagerank": 0,
      "pagerankRaw": 0,
      "paidOut": false,
      "payOutShare": 0,
      "payout": 0,
      "payoutTime": "[SANITIZED]",
      "post": "[SANITIZED]",
      "postDate": "[SANITIZED]",
      "rank": "[SANITIZED]",
      "relevance": 0,
      "relevanceNeg": 0,
      "repost": false,
      "shares": 0,
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "totalShares": 0,
      "type": "link",
      "upVotes": 0,
      "updatedAt": "[SANITIZED]",
    },
    "downVotes": 0,
    "embeddedUser": Object {
      "relevance": null,
    },
    "flagged": false,
    "flaggedBy": Array [],
    "hidden": false,
    "id": "[SANITIZED]",
    "latestComment": "[SANITIZED]",
    "links": Array [],
    "mentions": Array [],
    "metaPost": Object {
      "__v": 0,
      "_id": "[SANITIZED]",
      "articleAuthor": Array [],
      "categories": Array [
        null,
      ],
      "createdAt": "[SANITIZED]",
      "description": "my amazing post",
      "domain": "example.com",
      "flagged": false,
      "flaggedBy": Array [],
      "image": "link_img1.jpg",
      "keywords": Array [],
      "links": Array [],
      "tags": Array [
        "tag11",
        "tag12",
      ],
      "title": "postTitle",
      "updatedAt": "[SANITIZED]",
      "url": "https://example.com/testPost1",
    },
    "pagerank": 0,
    "paidOut": false,
    "payoutTime": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": "[SANITIZED]",
    "relevance": 0,
    "reposted": null,
    "seenInFeedNumber": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "twitter": false,
    "twitterScore": 0,
    "type": "link",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
    "url": "https://example.com/testPost1",
    "version": "metaRework",
  },
  "payoutTime": "[SANITIZED]",
  "postDate": "[SANITIZED]",
  "rank": 0,
  "relevance": 0,
  "reposted": null,
  "seenInFeedNumber": 0,
  "tags": Array [
    "tag11",
    "tag12",
  ],
  "title": "postTitle",
  "twitter": false,
  "twitterScore": 0,
  "type": "post",
  "upVotes": 0,
  "updatedAt": "[SANITIZED]",
  "url": "https://example.com/testPost1",
  "user": "a00000000000000000000000",
  "version": "metaRework",
}
`;

exports[`CreatePost api/post/create create text post 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "body": "awesome post #1!",
  "category": null,
  "children": null,
  "commentCount": 0,
  "commentary": null,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "data": Object {
    "__v": 0,
    "_id": "[SANITIZED]",
    "balance": 0,
    "community": "relevant",
    "communityId": "c00000000000000000000001",
    "createdAt": "[SANITIZED]",
    "downVotes": 0,
    "eligibleForReward": true,
    "expectedPayout": 0,
    "hidden": false,
    "isInFeed": true,
    "latestComment": "[SANITIZED]",
    "pagerank": 0,
    "pagerankRaw": 0,
    "paidOut": false,
    "payOutShare": 0,
    "payout": 0,
    "payoutTime": "[SANITIZED]",
    "post": "[SANITIZED]",
    "postDate": "[SANITIZED]",
    "rank": 0,
    "relevance": 0,
    "relevanceNeg": 0,
    "repost": false,
    "shares": 0,
    "tags": Array [
      "tag11",
      "tag12",
    ],
    "totalShares": 0,
    "type": "post",
    "upVotes": 0,
    "updatedAt": "[SANITIZED]",
  },
  "downVotes": 0,
  "embeddedUser": Object {
    "_id": "[SANITIZED]",
    "handle": "alice",
    "image": "alice-pic.jpg",
    "name": "Alice",
    "relevance": null,
  },
  "flagged": false,
  "flaggedBy": Array [],
  "hidden": false,
  "id": "[SANITIZED]",
  "links": Array [],
  "mentions": Array [
    "test",
    "user1",
  ],
  "pagerank": 0,
  "paidOut": false,
  "payoutTime": "[SANITIZED]",
  "postDate": "[SANITIZED]",
  "rank": 0,
  "relevance": 0,
  "reposted": null,
  "seenInFeedNumber": 0,
  "tags": Array [
    "tag11",
    "tag12",
  ],
  "title": "postTitle",
  "twitter": false,
  "twitterScore": 0,
  "type": "post",
  "upVotes": 0,
  "updatedAt": "[SANITIZED]",
  "user": "a00000000000000000000000",
  "version": "metaRework",
}
`;
